--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,6 @@ authors = ["Matthias Schneller <matthias.schneller@gmail.com>"]
 version = "0.1.3"
 
 [deps]
-Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
-SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
-ZernikePolynomials = "e462d300-c971-11e9-30f1-fb93b1f8f73a"
